--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -302,8 +302,7 @@ First, it respects the operadic structure of the associahedra (in fact, forces a
 Second, it satisfies the \emph{magical formula} of J.-L. Loday: the faces in the image of the diagonal are given by the pairs of faces which are comparable under the Tamari order (see \cref{sec:cellularDiagonals,rem:magicalFormula} for a precise statement). 
 This magical formula for the associahedra lead recently to new enumerative results for Tamari intervals~\cite{BostanChyzakPilaud}.
 
-Building on~\cite{MasudaThomasTonksVallette}, a general theory of topological cellular diagonals was developed in~\cite{LaplanteAnfossi}.
-\vincent{I would say geometric here, rather than topological cellular.}
+Building on~\cite{MasudaThomasTonksVallette}, a general theory of geometric diagonals was developed in~\cite{LaplanteAnfossi}.
 In particular, a combinatorial formula describing the image of the diagonal of any polytope was given~\cite[Thm.~1.26]{LaplanteAnfossi}.
 The topological operad structure of~\cite{MasudaThomasTonksVallette} on the associahedra was generalized to the family of operahedra, which comprise the family of permutahedra, and encodes the notion of homotopy operad.
 Cellular diagonals of the operahedra do \emph{not} satisfy the magical formula, and the combinatorial difficulty of describing their image is what prompted the development of the theory in~\cite{LaplanteAnfossi}.
@@ -322,8 +321,7 @@ In fact, there is an interesting dichotomy between the families of polytopes whi
 %\end{center}
 %\end{figure}
 
-An important feature of the operahedra is that they are all obtained from the permutahedra by projection (they are generalized permutahedra in the sense of~\cite{Postnikov}), and it was shown in~\cite[Sect.~1.6]{LaplanteAnfossi} that to understand their diagonals, it suffices to understand operadic diagonals of permutahedra, which is the purpose of the present paper.
-\vincent{This is incorrect. A generalized permutahedron is a deformation of the permutahedron, not a projection...}
+Since the operahedra are generalized permutahedra~\cite{Postnikov}, their operadc diagonals are completely determined by the by the operadic diagonals of permutahedra (see~\cite[Sect.~1.6]{LaplanteAnfossi}), which is the purpose of study of the present paper.
 
 The first cellular diagonal of the permutahedra was obtained at the algebraic level by S.~Saneblidze and R.~Umble~\cite{SaneblidzeUmble}.
 We shall call this diagonal the \emph{original $\SU$ diagonal} in the rest of the paper. 
@@ -454,18 +452,17 @@ For each $k$, there are $\binom{2k-1}{k-1,k}(k-1)!k!$ such patterns, which are $
 \end{enumerate}
 \end{theorem*}
 
-\cref{sec:shifts} is devoted to the study of alternate formulae for the operadic diagonals of the permutahedra.
-We prove that the geometric $\SU$ diagonal is a topological enhancement of the original $\SU$ diagonal.
-We then transfer all known definitions for both operadic diagonals via isomorphism, and show their facets admit a simple lattice structure.
-Our main result is,
-\vincent{would say a little more here...}
+In \cref{sec:shifts}, we introduce \emph{shifts} that can be performed on the facets of operadic diagonals.
+These allow us to show that the geometric $\SU$ diagonal is a topological enhancement of the original $\SU$ diagonal. 
 
 \begin{theorem*}[\cref{thm:recover-SU}]
 The original and geometric $\SU$ diagonals coincide. 
 \end{theorem*}
 
+The proof of this result, quite technical, procedes by showing the equivalence between $4$ different descriptions of the diagonal: the original, $1$-shift, $m$-shift and geometric $\SU$ diagonals (\cref{subsec:topological-SU}).
 This brings a positive answer to~\cite[Rem.~2.19]{LaplanteAnfossi}, showing that the original $\SU$ diagonal can indeed be recovered from a choice of chambers in the fundamental hyperplane arrangement of the permutahedron. 
 Our count of facets also agrees with the one made in~\cite{VejdemoJohansson}.
+
 Moreover, it provides a new proof that all known diagonals on the associahedra coincide~\cite{SaneblidzeUmble-comparingDiagonals}.
 Indeed, since the family of vectors inducing the geometric $\SU$ diagonal all have strictly decreasing coordinates, the diagonal induced on the associahedron is given by the magical formula~\cite[Thm.~2]{MasudaThomasTonksVallette}, see also~\cite[Prop.~3.8]{LaplanteAnfossi}.
 
@@ -487,32 +484,44 @@ The above theorem also allows us to translate the different combinatorial descri
 	\end{tabular}
 	\end{center}
 \end{figure}
-\Guillaume{Complete refs}
 
-In \cref{sec:Shift-lattice} we show that the facets of operadic diagonals admit a natural lattice structure that we call the \emph{shift lattice}.\Guillaume{@Kurt, do you want to highlight a feature of this lattice? Should we call it "cubical"?}
-We devote the last two subsections of \cref{sec:shifts} to the representation of the facets of operadic diagonals as matrices, and as pairs of subcubes in a cubical representation of the permutahedra.
-Both of these descriptions come from~\cite{SaneblidzeUmble}.
-Along the way, we provide proofs of some results\Guillaume{Cite them here} that were presented there as facts.
-\vincent{To discuss...}
+Moreover, in \cref{sec:Shift-lattice} we show that the facets of operadic diagonals admit a natural lattice structure that we call the \emph{shift lattice}.
+This lattice is a product of cubical lattices, indexed by the permutations of $[n]$.
+
+Finally, we present the alternative matrix (\cref{subsec:matrix}) and cubical (\cref{sec:Cubical}) descriptions of the $\SU$ diagonal from \cite{SaneblidzeUmble,SaneblidzeUmble-comparingDiagonals}, providing proofs of their equivalence with the other descriptions, and giving their $\LA$ counterparts. 
+The existence of this cubical description, based on a subdvision of the cube combinatorially isomorphic to the permutahedron, finds its conceptual root in the bar-cobar resolution of the associative permutad. 
+Indeed, this resolution is encoded by the dual subdivision of the permutahedron, which is cubical since $\Perm$ is a simple polytope, and a diagonal can be obtained from the classical Serre diagonal via retraction, see \cite{MarklShnider} and \cite[Sec. 5.1]{LaplanteAnfossiMazuir} for the case of the associahedra.
 
 %%%%%%%%%%%%%%%
 
 \subsection*{\cref{part:higherAlgebraicStructures}. Higher algebraic structures}
 
-In this last Part, we use the results of \cref{sec:operadicDiagonals} 
+In this third, shorter part we derive some higher algebaic consequences of the preceding results. 
+These higher algebraic considerations were the original motivation for the present study.
+They concern the \emph{operahedra}, a family of polytopes indexed by planar trees, which encode (non-symmetric non-unital) homotopy operads \cite{LaplanteAnfossi}.
+These admit realizations ``\`a la Loday", which generalize the Loday realizations of the associahedra. 
+The faces of an operahedron are in bijection with nestings, or parenthesization, of the corresponding planar tree. 
 
-\begin{theorem*}[\cref{thm:operahedra,thm:top-iso}] 
+\begin{theorem*}[\cref{thm:operahedra,thm:top-iso,thm:infinity-iso}] 
 There are exactly 
 \begin{enumerate}
-\item two operadic diagonals of the Loday operahedra, given by the $\LA$ and $\SU$ diagonals, 
-\item two colored topological cellular operad structures on the Loday operahedra, and
-\item two universal tensor products of homotopy operads,
+	\item two geometric operadic diagonals of the Loday operahedra, given by the $\LA$ and $\SU$ diagonals, 
+	\item two geometric colored topological cellular operad structures on the Loday operahedra, and
+	\item two geometric universal tensor products of homotopy operads,
 \end{enumerate}
 which agree with the generalized Tamari order on fully nested trees. 
-Moreover, the two topological operad structures are isomorphic and the two tensor products are not strictly isomorphic, but are related by an $\infty$-isotopy. 
+Moreover, the two topological operad structures are isomorphic, and the two tensor products are not strictly isomorphic, but are related by an $\infty$-isotopy. 
 \end{theorem*}
 
-Observe however that this isomorphism of topological operads in the category of polytopes (REF) does not commute with the diagonal maps (\cref{ex:iso-not-Hopf}), and that the pairs of faces in the image of the two operadic diagonals are not in bijection, yielding different (but $\infty$-isomorphic) tensor products of homotopy operads (\cref{subsec:tensor-products}).  
+Here, by the adjective ``geometric", we mean diagonal, operad and tensor product structures which are obtained geometrically on the polytopes via the Fulton--Sturmfelds method. 
+By ``universal", we mean a formula for the tensor product which applies to \emph{any} pair of homotopy operads.
+
+As the associahedra and the permutahedra are part of the family of operahedra, we get analogous results for $\Ainf$-algebras and homotopy associative permutads. 
+
+However, the isomorphism of topological operads, which takes place in the category of polytopes $\PolySub$ (for which the morphisms are \emph{not} affine maps, see \cite[Def. 4.13]{LaplanteAnfossi}) does \emph{not} commute with the diagonal maps (\cref{ex:iso-not-Hopf}).
+Moreover, the pairs of faces in the image of the two operadic diagonals are in general not in bijection (see \cref{ex:SU-LA-operahedra}), yielding different (but $\infty$-isomorphic) tensor products of homotopy operads.  
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -3979,6 +3988,7 @@ As such, we can commute any two shift operators.
 We now define our lattices.
 
 \begin{definition}
+\label{def:shift-lattice}
 For each permutation $v$ of $[n]$, let $T_v^\LA$ (\resp $T_v^\SU$) be the set of ordered $(2,n)$-partition trees, resulting from applying all $\LA$ ($\SU$) shifts to the SCP $(\sigma,\tau)$.
 We define the \defn{shift lattices}, also denoted $T_v^\LA$ ($T_v^\SU$), to be these sets partially ordered by the inclusion of their inversions sets. 
 \end{definition}
@@ -4707,7 +4717,7 @@ The same holds when taking the~$\circ_i^\SU$ operations instead of the $\circ_i^
 \end{proof}
 
 \begin{remark}
-	\cref{const:top-iso} and \cref{thm:top-iso} do not depend on a specific choice of operadic diagonals.
+	\cref{const:top-iso} and \cref{thm:top-iso} do not depend on a specific choice of operadic diagonal.
 	In this case, however, we do not loose any generality by using specifically the $\LA$ and $\SU$ operad structures. 
 \end{remark}
 
