--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -4751,7 +4751,7 @@ However, they are isomorphic in the category of homotopy operads and their $\inf
 
 \begin{proof}
 Since the two morphisms of topological operads $\LAD$ and $\SUD$ do not have the same cellular image, the tensor products that they define are not strictly isomorphic.
-However, they are both homotopic to the usual thing diagonal.
+However, they are both homotopic to the usual thin diagonal.
 Recall that homotopy operads are algebras over the colored operad $\mathcal{O}_\infty$, which is the minimal model of the operad $\mathcal{O}$ encoding (non-symmetric non-unital) operads \cite[Prop. 4.9]{LaplanteAnfossi}. 
 Using the universal property of the minimal model $\mathcal{O}_\infty$, one can show that the algebraic diagonals $\LAD,\SUD : \mathcal{O}_\infty \to \mathcal{O}_\infty \otimes \mathcal{O}_\infty$ are homotopic, in the sense of \cite{MarklShniderStasheff}[Sec. 3.10], see \cite[Prop. 3.136]{MarklShniderStasheff}.
 Thus, there exists an $\infty$-morphism between the two homotopy operad structures on the tensor product $\mathcal{P} \otimes \mathcal{Q}$.
