--- a/paper/diagonalsPermutahedra.bib
+++ b/paper/diagonalsPermutahedra.bib
@@ -489,13 +489,12 @@
 	YEAR = {2022},
 }
 
-@book{MarklShniderStasheff,
-  title = {Operads in Algebra, Topology and Physics},
-  author = {Markl, Martin and Shnider, Steve and Stasheff, James D.},
-  year = {2002},
-  series = {Mathematical Surveys and Monographs},
-  volume = {96},
-  pages = {x+349},
-  publisher = {{American Mathematical Society}},
-  address = {{Providence, RI}}
+@book {MarklShniderStasheff,
+	AUTHOR = {Markl, Martin and Shnider, Steve and Stasheff, Jim},
+	TITLE = {Operads in algebra, topology and physics},
+	SERIES = {Mathematical Surveys and Monographs},
+	VOLUME = {96},
+	PUBLISHER = {American Mathematical Society, Providence, RI},
+	YEAR = {2002},
+	PAGES = {x+349},
 }
