--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -237,6 +237,7 @@ VP was partially supported by the French ANR grant CHARMS (ANR-19-CE40-0017) and
 \author[G. Laplante-Anfossi]{Guillaume Laplante-Anfossi}
 \address[Guillaume Laplante-Anfossi]{School of Mathematics and Statistics, The University of Melbourne, Victoria, Australia}
 \email{guillaume.laplanteanfossi@unimelb.edu.au}
+\urladdr{\url{https://www.math.univ-paris13.fr/~laplante-anfossi/}}
 
 \author[V. Pilaud]{Vincent Pilaud}
 \address[Vincent Pilaud]{CNRS \& LIX, \'Ecole Polytechnique, Palaiseau, France}
@@ -246,6 +247,7 @@ VP was partially supported by the French ANR grant CHARMS (ANR-19-CE40-0017) and
 \author[K. Stoeckl]{Kurt Stoeckl}
 \address[Kurt Stoeckl]{School of Mathematics and Statistics, The University of Melbourne, Victoria, Australia}
 \email{kstoeckl@student.unimelb.edu.au}
+\urladdr{\url{https://kstoeckl.github.io/}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
